Only conclusions left

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -114,7 +114,7 @@ Then, to be able to compare the results and test our idea of algorithm \textit{e
 \label{fig:12series}
 \end{figure}
 
-Finally, as a last result, we reproduce the figure in which they change the step of predictability in order to see how \textit{far} the limit of predictability is and more important to see that there's one in fact, if there wasn't we would be doing something really wrong. We do the plot in Figure 6 where we can clearly appreciate that as we increase the number of steps ahead in time the predictability becomes smaller and smaller until a point that there's none unconditioned of the algorithm using. So yes, we can predict in some advance but it doesn't take long for chaos to strike back.
+Finally, as a last result, we reproduce the figure in which they change the step of predictability in order to see how \textit{far} the limit of predictability is and more important to see that there's one in fact, if there wasn't we would be doing something really wrong. We do plot in Figure 6 the predictability for different time advances where we can clearly appreciate that as we increase the number of steps ahead in time the predictability becomes smaller and smaller until a point that there's none unconditioned of the algorithm using. So yes, we can predict in some advance but it doesn't take long for chaos to strike back.
 
 \begin{figure}[h!]
 \centering
